# notas-microcontroladores

./: README.md  index.html
ESP8266/Esp8266WebSocket/: Esp8266WebSocket.ino
ESP8266/I2C/: platformio.ini
ESP8266/I2C/src/: main.cpp
ESP8266/JoystickVirtual/: JoystickVirtual.ino
ESP8266/JoystickVirtual/data/: index.html
ESP8266/MPU_6050_P1/: MPU_6050_P1.ino
ESP8266/MQTT_SUB/: MQTT_SUB.ino
ESP8266/MatrixLedsRGB/: platformio.ini
ESP8266/MatrixLedsRGB/src/: main.cpp
ESP8266/OLED/: OLED.ino  images.h
ESP8266/ledWifi/: ledWifi.ino
LedRemoto/: LedRemoto.ino
MICROPYTHON/hola_mundo/hola_mundo/: .micropythonrc  main.py
PI_PICO/I2C_SCANER/: CMakeLists.txt  I2C_SCANER.c
PI_PICO/blink/: CMakeLists.txt  main.c
PI_PICO/sensor_temperatura/: CMakeLists.txt  main.c
STM32F108C8/blinkLed/: platformio.ini
STM32F108C8/blinkLed/src/: main.cpp
TM4C123GXL /Adc_TIVA/: Adc_TIVA.ino
TM4C123GXL /HolaMundoRGB/: HolaMundoRGB.ino
TM4C123GXL /esquematicos/: readme.md
TM4C1294/esquematicos/: readme.md
